# NW_backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
py_mqtt_client/: config.py  mqtt.py
python/ai_agent/: Dockerfile  entrypoint.sh  pyproject.toml  setup.sh
python/ai_agent/ai_agent/: classify.py  inference.py
python/ai_agent/ai_agent/mqtt/: client.py  config.py
python/mqtt_client/: pyproject.toml
python/mqtt_client/mqtt_client/: config.py  handlers.py
scripts/: run_mqtt.py
