[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "Distributed AI application"
authors = ["Pieter-Jan Lyssens <pjlys@duck.com>"]
readme = "README.md"
packages = [
    { include = "ai_agent" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
