[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "Distributed AI application"
authors = ["Pieter-Jan Lyssens <pjlys@duck.com>"]
readme = "README.md"
packages = [
    { include = "ai_agent" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tflite-runtime = "^2.14.0"
matplotlib = "3.9"
argparse = "^1.4.0"
scipy = "1.12"
tflite-support = "^0.4.4"
sounddevice = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
