[tool.poetry]
name = "mqtt-client"
version = "0.1.0"
description = "Handles MQTT based communications"
authors = ["Pieter-Jan Lyssens <pjlys@duck.com>"]
readme = "README.md"
packages = [
    { include = "mqtt_client" }
]

[tool.poetry.dependencies]
python = ">=3.11"
paho-mqtt = ">=2.1.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

